GNOME Bugzilla – Bug 732697
riff: Hexprint invalid fourcc in error message
Last modified: 2014-07-04 12:57:23 UTC
This fourcc is currently printed as characters which cause warnings about non-UTF-8 characters: GStreamer-WARNING **: Trying to set string on structure field 'debug', but string is not valid UTF-8. Please file a bug.
Created attachment 279852 [details] [review] Proposed patch fixing error message.
commit 7807e2e6fd146cce26a0374aa3e4e03cc443a9b5 Author: Sebastian Rasmussen <sebrn@axis.com> Date: Thu Jul 3 18:32:02 2014 +0200 riff: Print invalid fourcc in error message in hex Previously this was printed as characters which caused later processing of the error message to sometimes warn about non-UTF-8 characters. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732697